fix for a border radius flickering bug

--- a/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
+++ b/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
@@ -25,6 +25,7 @@
   height: 255px;
   border-radius: 20px;
   overflow: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
   .tm-bgnd-wrapper {
     display: flex;
     align-items: center;
